--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@
 
 <html lang="en">
 	<head>
+		
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
@@ -11,6 +12,9 @@
 		<title>Yerri</title>
 	</head>
 	<body>
+		<a href="/">Inicio</a>
+        <a href="/about/">Sobre mi</a>
+		<a href="/blog/">Blog</a>
 		<h1>Sitio web Prueba</h1>
 	</body>
 </html>
