--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -26,6 +26,12 @@
             <li>Archivo principal es <strong>scr/pages/index.astro</strong></li>
             <li>La carpete src/pages sirve como router cada archivo dentro de esta carpeta es una pagina.</li>
         </ul>
+
+        <ul>
+            <li><a href="/posts/post-1/">Publicación 1</a></li>
+            <li><a href="/posts/post-2/">Publicación 2</a></li>
+            <li><a href="/posts/post-3/">Publicación 3</a></li>
+        </ul>
 	</body>
 </html>
 
