add content dinamic

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const tituloPagina = 'Inicio';
 ---
 
 <html lang="en">
@@ -9,10 +9,10 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Yerri</title>
+		<title> { tituloPagina }</title>
 	</head>
 	<body>
-		<a href="/">Inicio</a>
+		<a href="/">{ tituloPagina }</a>
         <a href="/about/">Sobre mi</a>
 		<a href="/blog/">Blog</a>
 		<h1>Sitio web Prueba</h1>
