--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,18 @@
 ---
+const tituloPagina = "Sobre mi";
 
+const identify = {
+    firstName: "Yerri",
+    country: "Peru",
+    occupation: "Developer",
+    hobbies: ["futbol", "box", "musica", "ejercicio"]
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "PHP", "Astro"];
+
+const happy = true;
+const finished = false;
+const goal = 3;
 ---
 
 <html lang="en">
@@ -8,19 +21,34 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Sobre Mi</title>
+		<title>{ tituloPagina }</title>
 	</head>
 	<body>
         <a href="/">Inicio</a>
         <a href="/about/">Sobre mi</a>
         <a href="/blog/">Blog</a>
-        <h1>Sobre mi</h1>
+        <h1> {tituloPagina}</h1>
         <h2>... ¡y mi nuevo sitio Astro!</h2>
 
         <p>Estoy trabajando en el tutorial introductorio de Astro. Este es la segunda página de mi sitio web, ¡y es la primera he construido yo mismo!</p>
 
         <p>Este sitio se irá actualizando a medida que vaya completando más partedes del tutorial, ¡así que no dejes de visitarlo para ver cómo va miviaje!</p>
 
-        
+        <p>Estos son algunos datos sobre mí:</p>
+        <ul>
+            <li>Me llamo {identify.firstName}</li>
+			<li>Vivo en {identify.country} y trabajo como {identify.occupation}</li>
+			{identify.hobbies.length >= 2 && 
+				<li> Dos de mis aficiones son: {identify.hobbies[0]} y {identify.hobbies[1]}</li>
+			}
+        </ul>
+		<p>Mis habilidades son:</p>
+		<ul>
+			{skills.map(skill => <li>{skill}</li>)}
+		</ul>
+
+		{happy && <p>¡Estoy feliz de aprender Astro!</p>}
+		{finished && <p>¡He terminado este tutorial!</p>}
+		{goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p> Mi objetivo no son 3 días.</p>}
 	</body>
 </html>
