--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+const tituloPagina = 'Blog';
+
 
 ---
 
@@ -9,13 +11,13 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Blog</title>
+		<title>{ tituloPagina }</title>
 	</head>
 	<body>
         <a href="/">Inicio</a>
         <a href="/about/">Sobre mi</a>
 		<a href="/blog/">Blog</a>
-        <h1>Mi Blog</h1>
+        <h1>{ tituloPagina }</h1>
         <h2>... Te contare todo acá!</h2>
 
         <h4>Mi experiencia con Astro</h4>
@@ -32,6 +34,8 @@
             <li><a href="/posts/post-2/">Publicación 2</a></li>
             <li><a href="/posts/post-3/">Publicación 3</a></li>
         </ul>
+
+        
 	</body>
 </html>
 
