--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
 
 const tituloPagina = 'Inicio';
 ---
@@ -14,9 +15,7 @@ const tituloPagina = 'Inicio';
 		<title> { tituloPagina }</title>
 	</head>
 	<body>
-		<a href="/">{ tituloPagina }</a>
-        <a href="/about/">Sobre mi</a>
-		<a href="/blog/">Blog</a>
+		<Navigation />
 		<h1>Sitio web Prueba</h1>
 	</body>
 </html>
