add footer use props in a component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
-import '../styles/global.css';
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
 
 const tituloPagina = 'Inicio';
 ---
@@ -17,5 +18,7 @@ const tituloPagina = 'Inicio';
 	<body>
 		<Navigation />
 		<h1>Sitio web Prueba</h1>
+
+		<Footer />
 	</body>
 </html>
