--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
 const tituloPagina = 'Blog';
 ---
@@ -34,7 +35,7 @@ const tituloPagina = 'Blog';
             <li><a href="/posts/post-3/">Publicación 3</a></li>
         </ul>
 
-        
+        <Footer />
 	</body>
 </html>
 
