add header component and styles

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,7 @@
 ---
 import '../styles/global.css';
-import Navigation from '../components/Navigation.astro';
 import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 
 const tituloPagina = 'Blog';
 ---
@@ -16,7 +16,7 @@ const tituloPagina = 'Blog';
 		<title>{ tituloPagina }</title>
 	</head>
 	<body>
-        <Navigation /> 
+        <Header />
         <h1>{ tituloPagina }</h1>
         <h2>... Te contare todo acá!</h2>
 
