--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
 const tituloPagina = 'Inicio';
 ---
 
-<html lang="en">
+<html lang="es">
 	<head>
 		
 		<meta charset="utf-8" />
@@ -16,7 +16,7 @@ const tituloPagina = 'Inicio';
 		<title> { tituloPagina }</title>
 	</head>
 	<body>
-		<Navigation />
+		<Header />
 		<h1>Sitio web Prueba</h1>
 
 		<Footer />
