--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 const tituloPagina = "Sobre mi";
@@ -33,7 +33,7 @@ const fontWeight = "bold";
 const textCase = "lowercase";
 ---
 
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -54,7 +54,7 @@ const textCase = "lowercase";
 		</style>
 	</head>
 	<body>
-        <Navigation />
+		<Header />
         <h1> {tituloPagina}</h1>
         <h2>... ¡y mi nuevo sitio Astro!</h2>
 
