send first script at navigator

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -36,6 +36,10 @@ const tituloPagina = 'Blog';
         </ul>
 
         <Footer />
+
+        <script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
 
