--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,5 +20,9 @@ const tituloPagina = 'Inicio';
 		<h1>Sitio web Prueba</h1>
 
 		<Footer />
+		
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
