--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,28 +1,11 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
-
-const tituloPagina = 'Inicio';
+import BaseLayout from "../layouts/BaseLayout.astro";
+const tituloPagina = "Yerri";
+const skillColor = "darkblue";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
-<html lang="es">
-	<head>
-		
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title> { tituloPagina }</title>
-	</head>
-	<body>
-		<Header />
-		<h1>Sitio web Prueba</h1>
-
-		<Footer />
-		
-		<script>
-			import "../scripts/menu.js";
-		</script>
-	</body>
-</html>
+<BaseLayout tituloPagina={tituloPagina} skillColor={skillColor} fontWeight={fontWeight} textCase={textCase}>
+	<h2>Haber que pasa!!!</h2>
+</BaseLayout>
