--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -7,7 +7,7 @@ const {frontmatter} = Astro.props;
 <p>Escrito por {frontmatter.author}</p>
 <p>Publicado el {frontmatter.pubDate.toString().slice(0,10)}</p>
 <p><em>{frontmatter.description}</em></p>
-<img src={frontmatter.image.url} alt={frontmatter.image.alt}>
+<img src={frontmatter.image.url} alt={frontmatter.image.alt} width="600px">
 <slot />
 <a href="/blog/">Regresar</a>
 </BaseLayout>
