--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,12 +1,13 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = await Astro.glob('../pages/posts/*.md');
 
 const tituloPagina = 'Blog';
 const skillColor = "purple";
 const fontWeight = "bold";
 const textCase = "uppercase";
 ---
-
 
 <BaseLayout tituloPagina={tituloPagina} skillColor={skillColor} fontWeight={fontWeight} textCase={textCase}>
     <h2>... Te contare todo acá!</h2>
@@ -21,9 +22,13 @@ const textCase = "uppercase";
     </ul>
 
     <ul>
-        <li><a href="/posts/post-1/">Publicación 1</a></li>
+        <!-- <li><a href="/posts/post-1/">Publicación 1</a></li>
         <li><a href="/posts/post-2/">Publicación 2</a></li>
-        <li><a href="/posts/post-3/">Publicación 3</a></li>
+        <li><a href="/posts/post-3/">Publicación 3</a></li> -->
+
+        <!-- {allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)} -->
+
+        {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
     </ul>
 
 </BaseLayout>
