--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,13 +1,49 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
 const {frontmatter} = Astro.props;
+
+
 ---
 <BaseLayout tituloPagina={frontmatter.title}>
-<meta charset="utf-8"></meta>
-<p>Escrito por {frontmatter.author}</p>
-<p>Publicado el {frontmatter.pubDate.toString().slice(0,10)}</p>
-<p><em>{frontmatter.description}</em></p>
-<img src={frontmatter.image.url} alt={frontmatter.image.alt} width="600px">
-<slot />
-<a href="/blog/">Regresar</a>
+    <meta charset="utf-8"></meta>
+    <p>Escrito por {frontmatter.author}</p>
+    <p>Publicado el {frontmatter.pubDate.toString().slice(0,10)}</p>
+    <p><em>{frontmatter.description}</em></p>
+    <img src={frontmatter.image.url} alt={frontmatter.image.alt} width="600px">
+    
+    <div class="tags">
+        {frontmatter.tags.map((tag) => (
+            <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
+        ))}
+    </div>
+
+    <slot />
+    <a href="/blog/">Regresar</a>
+
 </BaseLayout>
+
+<style>
+    a {
+        color: #00539f;
+        text-decoration: none;
+    }
+
+    a:hover{
+        color: chocolate;
+    }
+
+
+    .tags {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .tag {
+        margin: 0.25em;
+        border: dotted 1px #a1a1a1;
+        border-radius: .5em;
+        padding: .5em 1em;
+        font-size: 1.15em;
+        background-color: #f8fcfd;
+    }
+</style>
