finished tutorial Astro

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -23,7 +23,7 @@ const identify = {
 const skills = ["HTML", "CSS", "JavaScript", "PHP", "Astro"];
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 
 const skillColor = "purple";
