--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,6 +21,10 @@ const {skillColor, fontWeight, textCase} = Astro.props;
 				font-weight: var(--fontWeight);
 				text-transform: var(--textCase);
 			}
+
+			.dark .skill {
+				color: #f9b3ff;
+			}
 		</style>
 	</head>
 	<body>
