--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -2,4 +2,4 @@
 // const allPosts = await Astro.glob('../layouts/posts/*.md');
 const {url, title} = Astro.props;
 ---
-<li> <a href={url}> {title} </a></li>
+<li> <a href={url} class="postList"> {title} </a></li>
