--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,6 +12,10 @@ html.dark {
     color: #fff;
 }
 
+.dark .postList {
+    color: #c3fbc3;
+}
+
 body {
     margin: 0 auto;
     width: 100%;
@@ -66,6 +70,11 @@ h1{
 .nav-links a:focus {
     background-color: #ff9776;
 }
+
+.postList {
+    text-decoration: none;
+}
+
 
 .expanded {
     display: unset;
